[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scenes/boss/crosssinker/CrossSinker.gd" id="1"]
[ext_resource type="Texture2D" path="res://images/boss_crosssinker.svg" id="2"]

[sub_resource type="RectangleShape2D" id="1_1"]
size = Vector2(66, 26)

[node name="CrossSinker" type="Area2D"]
script = ExtResource("1")
monitoring = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.08, 0.08)
texture = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1_1")

[node name="BarrelLeft" type="Marker2D" parent="."]
position = Vector2(-14, 0)

[node name="BarrelRight" type="Marker2D" parent="."]
position = Vector2(14, 0)

[node name="RedClaw" type="Marker2D" parent="."]
position = Vector2(-10, 3)

[node name="BlueClaw" type="Marker2D" parent="."]
position = Vector2(10, 3)


